schema/testdata/errors/unique_input_bare_model.keel
model Author {
}

model Book {
    fields {
        author Author @unique
    }

    actions {
        //expect-error:25:31:ActionInputError:'author' refers to a model which cannot used as an input
        get getByAuthor(author)
    }
}
